--- a/app/src/main/res/layout/room_code_dialog.xml
+++ b/app/src/main/res/layout/room_code_dialog.xml
@@ -45,7 +45,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextCodeRoom"
+                android:id="@+id/editTextNicknameInsert"
                 android:layout_width="217dp"
                 android:layout_height="39dp"
                 android:layout_marginTop="24dp"
@@ -58,7 +58,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textCreateRoom" />
 
             <Button
-                android:id="@+id/buttonSaveGuestScore"
+                android:id="@+id/buttonCreateRoom"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -68,7 +68,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.179"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextCodeRoom"
+                app:layout_constraintTop_toBottomOf="@+id/editTextNicknameInsert"
                 app:layout_constraintVertical_bias="1.0" />
 
             <Button
@@ -79,7 +79,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.544"
-                app:layout_constraintStart_toEndOf="@+id/buttonSaveGuestScore"
+                app:layout_constraintStart_toEndOf="@+id/buttonCreateRoom"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.905" />
         </androidx.constraintlayout.widget.ConstraintLayout>
