--- a/app/src/main/res/layout/guest_score_fragment_dialog.xml
+++ b/app/src/main/res/layout/guest_score_fragment_dialog.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="@string/save_level_dialog"
+                android:text="@string/game_over"
                 android:textColor="#673AB7"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextCodeRoom"
+                android:id="@+id/editTextNicknameInsert"
                 android:layout_width="231dp"
                 android:layout_height="39dp"
                 android:layout_marginTop="24dp"
@@ -58,17 +58,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/textCreateRoom" />
 
             <Button
-                android:id="@+id/buttonSaveGuestScore"
+                android:id="@+id/buttonCreateRoom"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="@string/save_label"
+                android:text="@string/avanti"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextCodeRoom" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextNicknameInsert" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
