--- a/app/src/main/res/layout/fragment_leader_board.xml
+++ b/app/src/main/res/layout/fragment_leader_board.xml
@@ -45,7 +45,7 @@
         <ListView
             android:id="@+id/listScore"
             android:layout_width="match_parent"
-            android:layout_height="672dp"
+            android:layout_height="match_parent"
             android:scrollingCache="false"
             android:smoothScrollbar="true">
 
