--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -3,28 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/Text_menu"
-    android:background="@drawable/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-   <!-- <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/background_one"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/background"/>
+         <ImageView
+             android:id="@+id/background_one"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:src="@drawable/sfondophone" />
 
-        <ImageView
-            android:id="@+id/background_two"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/background"/>
+         <ImageView
+             android:id="@+id/background_two"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:src="@drawable/sfondophone" />
 
-    </FrameLayout> -->
+     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
