- imageView  sfondophone.jpg adattata per ogni tipo di schermo

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,12 +13,14 @@
         <ImageView
             android:id="@+id/background_one"
             android:layout_width="match_parent"
+            android:scaleType="fitXY"
             android:layout_height="match_parent"
             android:src="@drawable/sfondophone" />
 
         <ImageView
             android:id="@+id/background_two"
             android:layout_width="match_parent"
+            android:scaleType="fitXY"
             android:layout_height="match_parent"
             android:src="@drawable/sfondophone" />
 
