--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,11 +14,13 @@
              android:id="@+id/background_one"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:scaleType="fitXY"
              android:src="@drawable/sfondophone" />
 
          <ImageView
              android:id="@+id/background_two"
              android:layout_width="match_parent"
+             android:scaleType="fitXY"
              android:layout_height="match_parent"
              android:src="@drawable/sfondophone" />
 
