- comparto Audio iniziato ( creazione Service in background per la riproduzione del brano di benvenuto) - modifica colori Dialog

--- a/app/src/main/res/layout/modal_bottom_layout.xml
+++ b/app/src/main/res/layout/modal_bottom_layout.xml
@@ -4,9 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200">
+    android:background="#0066ff">
 
-    <TableLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/outputFragment"
+        class="com.caserteam.arkanoid.editor.ui_plus_check.FragmentVoid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayoutBottomSheet"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayoutBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMaxWidth="0dp"
@@ -14,54 +27,26 @@
         app:tabMode="fixed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.569"
+        app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25">
+        app:layout_constraintVertical_bias="0.0">
 
-        <TableRow
-            android:id="@+id/tableRow1"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabMattoni"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayoutBottomSheet"
-                android:layout_width="401dp"
-                android:layout_height="match_parent"
-                tools:layout_editor_absoluteY="402dp">
-
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/tabLocal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:icon="@drawable/ic_brick" />
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_brick" />
 
 
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/tabGlobal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:icon="@drawable/ic_obstacle" />
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabOstacles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_obstacle" />
 
 
-            </com.google.android.material.tabs.TabLayout>
-
-
-        </TableRow>
-
-        <TableRow android:id="@+id/TableRow2">
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/outputFragment"
-                class="com.caserteam.arkanoid.editor.ui_plus_check.FragmentVoid"
-                android:layout_width="311dp"
-                android:layout_height="273dp">
-
-            </androidx.fragment.app.FragmentContainerView>
-        </TableRow>
-
-
-    </TableLayout>
+    </com.google.android.material.tabs.TabLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
