--- a/app/src/main/res/layout/finish_game_dialog.xml
+++ b/app/src/main/res/layout/finish_game_dialog.xml
@@ -11,7 +11,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#CDDC39"
+        app:cardBackgroundColor="@android:color/holo_orange_dark"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
