--- a/app/src/main/res/layout-sw600dp/row_layout_leader_board.xml
+++ b/app/src/main/res/layout-sw600dp/row_layout_leader_board.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="nickname "
-            android:textSize="@dimen/font_size_no_Tablet"
+            android:textSize="@dimen/font_size_Tablet"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/scorePlayer"
             app:layout_constraintHorizontal_bias="0.21"
@@ -39,7 +39,7 @@
             android:layout_weight="0.5"
             android:gravity="center"
             android:text="score: "
-            android:textSize="@dimen/font_size_no_Tablet"
+            android:textSize="@dimen/font_size_Tablet"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.993"
