- aggiunto sistema di condivisione del proprio score!

--- a/app/src/main/res/layout/finish_game_dialog.xml
+++ b/app/src/main/res/layout/finish_game_dialog.xml
@@ -69,6 +69,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/resultGameTextView" />
+
+            <ImageButton
+                android:id="@+id/shareButton"
+                android:layout_width="52dp"
+                android:layout_height="47dp"
+                android:layout_marginStart="209dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginBottom="231dp"
+                android:background="@drawable/ic_baseline_share_24"
+                app:layout_constraintBottom_toBottomOf="@+id/resultGameTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/imageResultGame"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
